dbus (1.4.12-2) UNRELEASED; urgency=medium

  * Explicitly build-depend on automake 1.10, so buildds won't try and fail
    with automake1.9 like kfreebsd-i386 did

 -- Simon McVittie <smcv@debian.org>  Sat, 11 Jun 2011 12:47:01 +0100

dbus (1.4.12-1) unstable; urgency=medium

  * New upstream release fixes local DoS (Closes: #629938, no CVE number yet)
  * Don't delete jquery.js, no longer installed by recent Doxygen
  * Build-depend on libglib2.0-dev, libdbus-glib-1-dev for better regression
    test coverage (dbus-glib is a circular dependency, but both of these
    dependencies can be dropped if bootstrapping new architectures)

 -- Simon McVittie <smcv@debian.org>  Fri, 10 Jun 2011 22:39:14 +0100

dbus (1.4.10-2) unstable; urgency=low

  * Disable silent rules so we can have useful buildd logs
  * Update Vcs-Git, Vcs-Browser to the form preferred by the Alioth admins
  * Disable -Wl,--gc-sections and related flags: the size decrease is
    negligible, and these options currently segfault ld on armel and mips*
    (Closes: #628834)
  * Disable the build-time tests for now, they need more upstream work before
    they'll pass in a minimal build chroot

 -- Simon McVittie <smcv@debian.org>  Thu, 02 Jun 2011 17:08:25 +0100

dbus (1.4.10-1) unstable; urgency=low

  * New upstream version
  * Use a separate build directory
  * Explicitly set compiler flags
  * Don't complain about not installing libdbus-1.la
  * Don't pass a version to dh_makeshlibs -V - the symbols file gives us
    exact dependencies, so the legacy shlibs mechanism is just a guard against
    old systems now, and everyone forgets to update it
  * Do a second build with tests, verbosity etc. enabled, and install it
    in /usr/lib/$DEB_HOST_MULTIARCH/dbus-1.0/debug-build in dbus-1-dbg
    (Closes: #498185)
    - increase dependencies of dbus-1-dbg to allow for this
    - run the debug build's regression tests during build, but don't make
      failures fatal yet