@@ -1,5 +1,7 @@
 dbus (1.4.12-2) UNRELEASED; urgency=medium
 
+  * Don't run tests during build (again), it appears they time out on most of
+    of the buildds
   * Explicitly build-depend on automake 1.10, so buildds won't try and fail
     with automake1.9 like kfreebsd-i386 did
 
